service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - name: http
      port: 8080
      nodePort: 30062
  selector:
    app: web
  type: NodePort
